# pyfastspring

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
src/pyfastspring/: __init__.py  exceptions.py  pyfastspring.py
