[metadata]
name = stephendwolff
version = 0.0.1
author = Stephen Wolff
author_email = stephen@maxgatedigital.com
description = A module for working with the FastSpring orders and subscriptions API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stephendwolff/pyfastspring
project_urls =
    Bug Tracker = https://github.com/stephendwolff/pyfastspring/issues
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src